# spellesp

./: .cspell.json  Cargo.toml
src/: main.rs
