[package]
name = "spellesp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = [
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.17"
